--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
               <ul class="card-footer">
                 <li class="date">January 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i
                   >4.5k
                 </li>
               </ul>
@@ -109,10 +106,7 @@
               <ul class="card-footer">
                 <li class="date">February 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   10.1k
                 </li>
               </ul>
@@ -136,10 +130,7 @@
               <ul class="card-footer">
                 <li class="date">March 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   15.3k
                 </li>
               </ul>
@@ -165,10 +156,7 @@
               <ul class="card-footer">
                 <li class="date">April 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   13k
                 </li>
               </ul>
@@ -192,10 +180,7 @@
               <ul class="card-footer">
                 <li class="date">May 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   20.9k
                 </li>
               </ul>
@@ -219,10 +204,7 @@
               <ul class="card-footer">
                 <li class="date">June 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   5k
                 </li>
               </ul>
@@ -246,10 +228,7 @@
               <ul class="card-footer">
                 <li class="date">July 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   99k
                 </li>
               </ul>
@@ -275,10 +254,7 @@
               <ul class="card-footer">
                 <li class="date">August 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   7.8k
                 </li>
               </ul>
@@ -302,10 +278,7 @@
               <ul class="card-footer">
                 <li class="date">September 1, 2023</li>
                 <li>
-                  <i
-                    class="fa-regular fa-heart heart"
-                    onclick="favorite(this)"
-                  ></i>
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
                   4.6k
                 </li>
               </ul>
