--- a/index.html
+++ b/index.html
@@ -31,6 +31,39 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">LOGO</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link blog" aria-current="page" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Courses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Free Webinars</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Reviews</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- <nav class="navbar navbar-expand-lg container-fluid">
         <label class="logo"><p>LOGO</p></label>
         <button
           class="navbar-toggler"
@@ -63,7 +96,7 @@
             <li class="nav-item"><a class="log-in" href="#">Log in</a></li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
     </header>
     <main>
       <section class="myCard-cont">
@@ -82,8 +115,8 @@
               <ul class="card-footer">
                 <li class="date">January 1, 2023</li>
                 <li>
-                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i
-                  >4.5k
+                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
+                  4.5k
                 </li>
               </ul>
             </div>
