--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav menu ms-auto">
               <li class="nav-item">
                 <a class="nav-link blog" aria-current="page" href="#">Blog</a>
               </li>
@@ -56,13 +56,24 @@
                 <a class="nav-link" href="#">Free Webinars</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Reviews</a>
+                <a class="nav-link" href="#">Reviews</a>
+              </li>
+            </ul>
+          </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav sign-log ms-auto">
+              <li class="nav-item">
+                <a class="nav-link sign" href="#">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link log" href="#">Login</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 
+      <!-- nav w/o bootstrap -->
       <!-- <nav class="navbar navbar-expand-lg container-fluid">
         <label class="logo"><p>LOGO</p></label>
         <button
