added card functions

--- a/index.html
+++ b/index.html
@@ -112,14 +112,21 @@
     <main>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card1"
             src="assets/images/card1.png"
             alt="Card Image"
           />
+          <div class="shadow"></div>
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>Front-End vs Back-End Developer: What's the Difference?</p>
             <hr />
             <div>
@@ -136,14 +143,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card2"
             src="assets/images/card2.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>What is a Full Stack Developer?</p>
             <hr />
             <div>
@@ -160,14 +173,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card3"
             src="assets/images/card3.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>What are the Soft Skills and How Do They Benefit Your Career?</p>
             <hr />
             <div>
@@ -184,14 +203,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card4"
             src="assets/images/card4.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>
               IT Jobs: In-Demand, Available to Everyone, Ripe With Opportunity.
             </p>
@@ -210,14 +235,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card5"
             src="assets/images/card5.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>7 Learning Tips for Data Science Self-Study.</p>
             <hr />
             <div>
@@ -234,14 +265,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card6"
             src="assets/images/card6.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>Hard Skills vs. Soft Skills: Do You Really Need Both? Why?</p>
             <hr />
             <div>
@@ -258,21 +295,31 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card7"
             src="assets/images/card7.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>What is JavaScript?</p>
             <hr />
             <div>
               <ul class="card-footer">
                 <li class="date">July 1, 2023</li>
                 <li>
-                  <i class="fa-regular fa-heart heart" onclick="like(this)"></i>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="like(this)"
+                    onclick="remove(this)"
+                  ></i>
                   99k
                 </li>
               </ul>
@@ -282,14 +329,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card8"
             src="assets/images/card8.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>
               Who is Business Analyst: Roles, Skills, Salaries, Job Prospects?
             </p>
@@ -308,14 +361,20 @@
       </section>
       <section class="myCard-cont">
         <div class="myCard">
-          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <i
+            class="fa-regular fa-circle-xmark circle-x"
+            onclick="remove(this)"
+          ></i>
           <img
             class="img-card9"
             src="assets/images/card9.png"
             alt="Card Image"
           />
           <div class="card-content">
-            <i class="fa-regular fa-circle-check circle-check"></i>
+            <i
+              class="fa-regular fa-circle-check circle-check"
+              onclick="read(this)"
+            ></i>
             <p>How Much Do Data Analysts Make? 2023 Salary Guide</p>
             <hr />
             <div>
