--- a/index.html
+++ b/index.html
@@ -72,42 +72,6 @@
           </div>
         </div>
       </nav>
-
-      <!-- nav w/o bootstrap -->
-      <!-- <nav class="navbar navbar-expand-lg container-fluid">
-        <label class="logo"><p>LOGO</p></label>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="menu navbar-nav">
-            <li class="nav-item">
-              <a class="blog" aria-current="page" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="courses" href="#">Our Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="webinars" href="#">Free Webinars</a>
-            </li>
-            <li class="nav-item">
-              <a class="reviews" href="#">Reviews</a>
-            </li>
-          </ul>
-          <ul class="sign-log navbar-nav">
-            <li class="nav-item"><a class="sign-up" href="#">Sign Up</a></li>
-            <li class="nav-item"><a class="log-in" href="#">Log in</a></li>
-          </ul>
-        </div>
-      </nav> -->
     </header>
     <main>
       <section class="myCard-cont">
@@ -121,7 +85,7 @@
             src="assets/images/card1.png"
             alt="Card Image"
           />
-          <div class="shadow"></div>
+          <div class="shadow1"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -152,6 +116,7 @@
             src="assets/images/card2.png"
             alt="Card Image"
           />
+          <div class="shadow2"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -182,6 +147,7 @@
             src="assets/images/card3.png"
             alt="Card Image"
           />
+          <div class="shadow3"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -212,6 +178,7 @@
             src="assets/images/card4.png"
             alt="Card Image"
           />
+          <div class="shadow4"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -244,6 +211,7 @@
             src="assets/images/card5.png"
             alt="Card Image"
           />
+          <div class="shadow5"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -274,6 +242,7 @@
             src="assets/images/card6.png"
             alt="Card Image"
           />
+          <div class="shadow6"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -304,6 +273,7 @@
             src="assets/images/card7.png"
             alt="Card Image"
           />
+          <div class="shadow7"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -338,6 +308,7 @@
             src="assets/images/card8.png"
             alt="Card Image"
           />
+          <div class="shadow8"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
@@ -370,6 +341,7 @@
             src="assets/images/card9.png"
             alt="Card Image"
           />
+          <div class="shadow9"></div>
           <div class="card-content">
             <i
               class="fa-regular fa-circle-check circle-check"
